// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`InArticlePuff should render optional fields correctly 1`] = `
<DocumentFragment>
  <div
    class="sc-bdVaJa iOjYkI"
    data-testid="InArticlePuff - Container"
    style="border-top: 2px solid #13354E;"
  >
    <div
      class="sc-bwzfXH gnuJTU"
    >
      <a
        href="https://www.thetimes.co.uk"
      >
        <img
          src="https://via.placeholder.com/150"
        />
      </a>
    </div>
    <div
      class="sc-htpNat iDFTFF"
    >
      <div>
        <div
          class="sc-bxivhb kgxINO"
          style="color: rgb(19, 53, 78);"
        >
          interactive
        </div>
        <a
          href="https://www.thetimes.co.uk"
        >
          <h4
            class="sc-ifAKCX blkHhG"
          >
            Where can I get a Covid vaccine in England?
          </h4>
        </a>
        <div
          class="sc-EHOje eFGeLn"
        >
          Enter your postcode to find your nearest centre
        </div>
      </div>
      <a
        class="sc-bZQynM hVxGDZ"
        href="https://www.thetimes.co.uk"
      >
        <div
          class="sc-gzVnrw egPvuA"
        >
          Read the full article
        </div>
        <div>
          IconForwardChevron
        </div>
      </a>
    </div>
  </div>
</DocumentFragment>
`;

exports[`InArticlePuff should render required fields correctly 1`] = `
<DocumentFragment>
  <div
    class="sc-bdVaJa iOjYkI"
    data-testid="InArticlePuff - Container"
    style="border-top: 2px solid #13354E;"
  >
    <div
      class="sc-htpNat fZHOiQ"
    >
      <div>
        <div
          class="sc-bxivhb hClSwN"
          style="color: rgb(19, 53, 78);"
        >
          interactive
        </div>
        <a
          href="https://www.thetimes.co.uk"
        >
          <h4
            class="sc-ifAKCX efhiOC"
          >
            Where can I get a Covid vaccine in England?
          </h4>
        </a>
      </div>
      <a
        class="sc-bZQynM hVxGDZ"
        href="https://www.thetimes.co.uk"
      >
        <div
          class="sc-gzVnrw egPvuA"
        >
          Read more
        </div>
        <div>
          IconForwardChevron
        </div>
      </a>
    </div>
  </div>
</DocumentFragment>
`;

exports[`InArticlePuff should render the initial loading state correctly 1`] = `
<DocumentFragment>
  <div>
    Placeholder
  </div>
</DocumentFragment>
`;
